edition = "2023";

package auth.v1;
import "google/protobuf/timestamp.proto";


// hold resulting token
message TokenPair {
    string access_token = 1;
    string refresh_token = 2;
    google.protobuf.Timestamp expires_at = 3;
}

message Claims {
    string user_id = 1;
    string username = 2;
    repeated string roles = 3;
    google.protobuf.Timestamp issued_at = 4;
    google.protobuf.Timestamp expires_at = 5;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    TokenPair tokens = 1;
}

// refresh token
message RefreshTokenRequest {
    string refresh_token = 1;
}

message RefreshTokenResponse {
    TokenPair tokens = 1;
}

// Validate tokens

message ValidateTokenRequest {
    string access_token = 1;
}

message ValidateTokenResponse {
    bool valid = 1;
    Claims claims = 2;
}

// Logout
message LogoutRequest {
    string refresh_token = 1;
}

message LogoutResponse {
    bool success = 1;
}

service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
    rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
    rpc Logout(LogoutRequest) returns (LogoutResponse);
}